--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@android:style/Theme.Holo.Light.Dialog"
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" >
+            android:label="@string/title_activity_settings"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+        </activity>
+        <activity
+            android:name=".info.AutoInfoActivity"
+            android:label="@string/title_activity_auto_info" >
+        </activity>
+        <activity
+            android:name=".info.ConsumerInfoActivity"
+            android:label="@string/title_activity_consumer_info" >
+        </activity>
+        <activity
+            android:name=".info.CreditCardInfoActivity"
+            android:label="@string/title_activity_credit_card" >
+        </activity>
+        <activity
+            android:name=".info.DepositsInfoActivity"
+            android:label="@string/title_activity_deposits_info" >
+        </activity>
+        <activity
+            android:name=".info.MortgageInfoActivity"
+            android:label="@string/title_activity_mortgage_info" >
         </activity>
     </application>
 
