--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="bg.financialproducts" >
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="bg.financialproducts">
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,34 +18,33 @@
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+            android:theme="@android:style/Theme.Holo.Light.Dialog">
         </activity>
         <activity
             android:name=".info.AutoInfoActivity"
-            android:label="@string/title_activity_auto_info" >
+            android:label="@string/title_activity_auto_info">
         </activity>
         <activity
             android:name=".info.ConsumerInfoActivity"
-            android:label="@string/title_activity_consumer_info" >
+            android:label="@string/title_activity_consumer_info">
         </activity>
         <activity
             android:name=".info.CreditCardInfoActivity"
-            android:label="@string/title_activity_credit_card" >
+            android:label="@string/title_activity_credit_card">
         </activity>
         <activity
             android:name=".info.DepositsInfoActivity"
-            android:label="@string/title_activity_deposits_info" >
+            android:label="@string/title_activity_deposits_info">
         </activity>
         <activity
             android:name=".info.MortgageInfoActivity"
-            android:label="@string/title_activity_mortgage_info" >
+            android:label="@string/title_activity_mortgage_info">
         </activity>
     </application>
 
