--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@android:style/Theme.Holo.Light.Dialog">
         </activity>
         <activity
