--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/CustomActionBarTheme" >
+        android:theme="@style/Theme.AppCompat" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -25,7 +25,7 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@android:style/Theme.Holo.Light.Dialog">
+            android:theme="@style/Theme.AppCompat.Light">
         </activity>
         <activity
             android:name=".info.AutoInfoActivity"
