--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,53 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="bg.financialproducts">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="bg.financialproducts" >
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".GlobalVariable"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat"
-        android:hardwareAccelerated="true">
+        android:theme="@style/Theme.AppCompat" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.AppCompat.Light"
+            android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
             android:name=".info.AutoInfoActivity"
-            android:label="@string/title_activity_auto_info">
+            android:label="@string/title_activity_auto_info" >
         </activity>
         <activity
             android:name=".info.ConsumerInfoActivity"
-            android:label="@string/title_activity_consumer_info">
+            android:label="@string/title_activity_consumer_info" >
         </activity>
         <activity
             android:name=".info.CreditCardInfoActivity"
-            android:label="@string/title_activity_credit_card">
+            android:label="@string/title_activity_credit_card" >
         </activity>
         <activity
             android:name=".info.DepositsInfoActivity"
-            android:label="@string/title_activity_deposits_info">
+            android:label="@string/title_activity_deposits_info" >
         </activity>
         <activity
             android:name=".info.MortgageInfoActivity"
-            android:label="@string/title_activity_mortgage_info">
+            android:label="@string/title_activity_mortgage_info" >
         </activity>
+        <service
+            android:name=".util.BannerService"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
